--- a/src/pug/corporate-events/index.pug
+++ b/src/pug/corporate-events/index.pug
@@ -40,7 +40,7 @@ block content
             div
               span £50/driver
               span 16+ drivers
-              a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=corporategrandprix60driver' target='_blank') Book Now
+              a.button.button__primary(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=corporategrandprix60driver' target='_blank') Book Now
           li
             div
               h3 Super Prix
@@ -51,7 +51,7 @@ block content
             div
               span £55/driver
               span 16+ drivers
-              a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=corporatesupergrandprix66driver' target='_blank') Book Now
+              a.button.button__primary(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=corporatesupergrandprix66driver' target='_blank') Book Now
 
         p Corporate bookings are subject to VAT at the current rate. #[a(href='/contact' target='_blank') Call us today] to book a corporate event.
               
