--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -29,7 +29,7 @@ block content
   section.black.main-title
     .container
       h1.center The midlands' #[span.red premiere] indoor karting experience
-      h2.center Specialists in Corporate Entertainment and Hospitality
+      //- h2.center Specialists in Corporate Entertainment and Hospitality
       div
         a.button.button__primary(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx') Book Online
         a.button.button__grey(href='/race-packages') Race Packages
@@ -46,20 +46,21 @@ block content
           a.button.button__primary(href='/race-packages') Book Online
       .category-cards__card
         .category-cards__card--image
+          img(src='/images/home-categories/arrive-and-drive.jpg' alt='Arrive & Drive')
+        .sticker Summer Deals now active!
+        .category-cards__card--text
+          h2 Arrive & Drive
+          .red-highlight
+          p There's no need to book for small groups - turn up at any time and drive for up to 100 laps! Drivers aged 12 years or older are welcome anytime as long as the track is available. High performance 200cc karts are available for ages 14 and over.
+          a.button.button__primary(href='/arrive-and-drive') Book Online
+      .category-cards__card
+        .category-cards__card--image
           img(src='/images/home-categories/juniors-and-parties.jpg' alt='Juniors & Parties')
         .category-cards__card--text
           h2 Juniors & Parties
           .red-highlight
           p Go-karting makes a great birthday party or family event for up to 8 people. Our junior packages include up to one hour of track time per driver, a hot meal and drinks in our private corporate lounge overlooking the track, plus medals and a trophy for the birthday host.
           a.button.button__primary(href='/juniors-and-parties') Book Online
-      .category-cards__card
-        .category-cards__card--image
-          img(src='/images/home-categories/arrive-and-drive.jpg' alt='Arrive & Drive')
-        .category-cards__card--text
-          h2 Arrive & Drive
-          .red-highlight
-          p There's no need to book for small groups - turn up at any time and drive for up to 100 laps! Drivers aged 12 years or older are welcome anytime as long as the track is available. High performance 200cc karts are available for ages 14 and over.
-          a.button.button__primary(href='/arrive-and-drive') Book Online
           
   section.black.corporate-events
     .container.center
@@ -70,13 +71,3 @@ block content
       p.bold Run by professional people who care.
       a.button.button__primary(href='/corporate-events') View Prices
 
-  //- section.dark-grey
-  //-   .container
-  //-     #instafeed.social-feed-instagram
-  //-       .social-feed-instagram-post
-  //-       .social-feed-instagram-post
-  //-       .social-feed-instagram-post
-  //-       .social-feed-instagram-post
-  //-       .social-feed-instagram-post
-  //-       .social-feed-instagram-post
-        
