--- a/src/pug/juniors-and-parties/index.pug
+++ b/src/pug/juniors-and-parties/index.pug
@@ -39,7 +39,7 @@ block content
             div
               span £350
               span up to 8 drivers
-              a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?packagegroup=juniorpartypackage' target='_blank') Book Now
+              a.button.button__primary(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?packagegroup=juniorpartypackage' target='_blank') Book Now
 
         p 11 driver, 16 driver, and 20 driver party packages also available.
               
@@ -60,7 +60,7 @@ block content
             div
               span £450
               span up to 10 drivers
-              a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=privatehire1hour10drivers45000' target='_blank') Book Now
+              a.button.button__primary(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=privatehire1hour10drivers45000' target='_blank') Book Now
           li
             div
               h3 40 Minute Private Hire
@@ -68,4 +68,4 @@ block content
             div
               span £350
               span up to 10 drivers
-              a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=privatehire40minutes10drivers35000' target='_blank') Book Now
+              a.button.button__primary(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=privatehire40minutes10drivers35000' target='_blank') Book Now
