--- a/src/pug/race-packages/index.pug
+++ b/src/pug/race-packages/index.pug
@@ -39,10 +39,10 @@ block content
             div
               span £45 per driver
               span 13+ drivers
-              a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=grandprix45driver' target='_blank') Book Now
+              a.button.button__primary(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=grandprix45driver' target='_blank') Book Now
           li
             div
-              h3 Super Grand Prix #[span.sticker Popular]
+              h3 Super Grand Prix
               p 5 Lap Practice Session
               p 6 x 6 Lap Heats Per Driver
               p 8 Lap Semi Final For Top 16 Drivers
@@ -50,7 +50,8 @@ block content
             div
               span £50 per driver
               span 13+ drivers
-              a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=supergrandprix50driver' target='_blank') Book Now
+              p.sticker Popular
+              a.button.button__primary(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=supergrandprix50driver' target='_blank') Book Now
 
       .content-block
         h2 Team Challenge Events (aged 14yrs+)
@@ -65,16 +66,17 @@ block content
             div
               span £120 per Team
               span 2/3 Drivers per Team
-              a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=endurance090teamchallenge23drivers120team' target='_blank') Book Now
+              a.button.button__primary(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=endurance090teamchallenge23drivers120team' target='_blank') Book Now
           li
             div
-              h3 Team Challenge 120 #[span.sticker Popular]
+              h3 Team Challenge 120 
               p 30 Minute combined Practice & Qualifying Session
               p 90 Minute Non-Stop Race with Driver Changes Throughout
             div
               span £150 per Team
               span 3 Drivers per Team
-              a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=endurance120teamchallenge3drivers150team' target='_blank') Book Now
+              p.sticker Popular
+              a.button.button__primary(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=endurance120teamchallenge3drivers150team' target='_blank') Book Now
           li
             div
               h3 Team Challenge 150
@@ -83,7 +85,7 @@ block content
             div
               span £175 per Team
               span 3/4 Drivers per Team
-              a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=endurance150teamchallenge34drivers175team' target='_blank') Book Now
+              a.button.button__primary(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=endurance150teamchallenge34drivers175team' target='_blank') Book Now
               
       .content-block
         h2 Endurance Events (aged 14yrs+)
@@ -107,17 +109,18 @@ block content
             div
               span £40 per driver
               span 8-10 drivers
-              a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=endurance030dash40driver' target='_blank') Book Now
+              a.button.button__primary(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=endurance030dash40driver' target='_blank') Book Now
           li
             div
-              h3 Challenge 45 #[span.sticker Popular]
+              h3 Challenge 45
               p 15 Minute Practice/Qualifying Session
               p 15 Minute Break
               p 2 x 15 Minute Races with 15 Minute Breaks between
             div
               span £50 per driver
               span 8-10 drivers
-              a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=endurance045challenge50driver' target='_blank') Book Now
+              p.sticker Popular
+              a.button.button__primary(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=endurance045challenge50driver' target='_blank') Book Now
           li
             div
               h3 Super Challenge 60
@@ -127,5 +130,5 @@ block content
             div
               span £60 per driver
               span 8-10 drivers
-              a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=endurance060superchallenge60driver' target='_blank') Book Now
+              a.button.button__primary(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=endurance060superchallenge60driver' target='_blank') Book Now
               
