--- a/src/css/_partials/typography.styl
+++ b/src/css/_partials/typography.styl
@@ -68,10 +68,11 @@ p
 .red
   color primaryColor
 
-span.sticker
+.sticker
+  text-align center
   background mainGreen
-  padding .5rem 1rem
-  margin 1rem 0 1rem 1rem
+  padding .5rem 1.25rem
+  margin .5rem 0 .5rem 0
   color white
   font-family sansSerif
   font-size 1.4rem
@@ -79,3 +80,8 @@ span.sticker
   box-sizing border-box
   letter-spacing 0
   border-radius 5px
+  text-transform uppercase
+  line-height 1.4 !important
+  width 100%
+  user-select none
+  
