--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -7,26 +7,9 @@
 @import '_partials/nav'
 @import '_partials/forms'
 
-.virus
-
-  .container
-    display flex
-    flex-direction column
-    align-items center
-
-  &__text
-    margin-top 2rem
-    max-width 600px
-
-    ol 
-      margin 2rem 0 4rem 0
-    
-      li
-        list-style-type number
-        margin-bottom 1rem
-
-    h3
-      margin-top 4rem  
+body
+  margin-top 11.8rem
+  background black
 
 .header-video
   position relative
@@ -171,7 +154,7 @@
     align-items center
   
   h1
-    margin 0 0 1rem 0
+    margin 0 0 2rem 0
 
   h2
     margin 0 0 2rem 0
@@ -197,6 +180,10 @@
     width 31%
     border-radius 5px
     overflow hidden
+
+    .sticker
+      margin 0
+      border-radius 0
 
     &--text
       padding 2rem 2rem 2.5rem 2rem
@@ -224,7 +211,7 @@
     align-items center
     justify-content space-between    
     position relative
-    z-index 1
+    z-index 0
 
     &::before 
       content ""
@@ -280,6 +267,7 @@
       opacity .75
 
 .newsletter
+  background white
 
   .container
     display flex
@@ -291,11 +279,19 @@
       margin 0 4rem 0 0
 
     form
+      width 100%
+      max-width 40rem
       display flex
+      flex-grow 1
+      flex-wrap nowrap
+
+      input
+        flex-grow 1
 
       button
         border-radius 0
         font-size 1.2rem
+        width auto
 
 .footer
 
@@ -380,6 +376,7 @@
 // Prevents colour flickering as iframe loads
 .google-maps
   background #E5E3DF
+  margin-bottom -.5rem
 
 .contact
 
@@ -458,6 +455,13 @@
         margin-bottom .5rem
 
     &--packages 
+
+      &--carts p
+        font-size 1.4rem
+        padding-top .2rem
+
+        span
+          font-weight bold
       
       li
         display flex
@@ -476,7 +480,7 @@
               color red
 
             p
-              margin .5rem 0
+              margin .75rem 0
               line-height 1.2
 
           &:nth-child(2)
@@ -490,23 +494,12 @@
             span
               font-size 1.6rem
               line-height 1.2
+              margin-bottom 1rem
 
               &:first-child
                 font-family 'BigNoodleTitling'
                 font-size 3.2rem
-
-            a 
-              display inline-block
-              padding .5rem 1rem
-              margin-top .5rem
-              background linkColorAccent
-              color white
-              font-weight 700
-              font-size 1.4rem
-
-              &:hover
-                text-decoration none
-                background mainGreen
+                margin-bottom .5rem
               
 
 .arrive-and-drive
@@ -571,6 +564,9 @@
       margin-top -5px
 
 @media(max-width: breakpointMedium)
+
+  body
+    margin-top 11rem
 
   .main-title
     
@@ -683,6 +679,9 @@
     &__card
       width 100%
       margin-bottom 2rem
+
+      .button
+        width 100%
   
   .track
 
@@ -715,11 +714,21 @@
 
   .race-packages__price-list--packages li
     flex-direction column
+    margin-bottom 4rem
 
-    div:nth-child(2)
-      margin-top .5rem
-      margin-left 0
-      align-items flex-start
+    div
+      width 100%
+
+      &:nth-child(2)
+        margin-top .5rem
+        margin-left 0
+        align-items flex-start
+        width 100%
+
+        a
+          padding 1.5rem
+          width 100%
+          text-align center
 
   .contact
 
