--- a/src/pug/arrive-and-drive/index.pug
+++ b/src/pug/arrive-and-drive/index.pug
@@ -17,7 +17,7 @@ block content
       .red-highlight.centered
       .arrive-and-drive__description
         div
-          p Options available from £22 per driver*
+          p Options available from £22 per driver.
           p Arrive and Drive is for you to come and hone your skills in the Practice Lap Sessions. We can run children as low as 8 years old in the mid-week off peak times between 10.00am – 6.00pm Monday – Friday, and at 11:00am on Sundays.
           p For drivers aged 12yrs+, you can go on the track at anytime as long as it is available but please book to avoid disappointment.
           p Time limits apply during our peak times and busy periods.
@@ -36,33 +36,47 @@ block content
             div
               h3 20 lap practice
               p 20 Laps (15 Minute) Non-Stop Session
+              .race-packages__price-list--packages--carts 
+                p #[span Carts:] SR4 200cc (14+), Junior Racer (8-13)
             div
               span £22/driver
-              span Adult SR4 200cc (14+)
-              span Junior Racer (8-13)
-              a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=juniorandfamilieskarting020laps' target='_blank') Book Now
+              a.button.button__primary(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=juniorandfamilieskarting020laps' target='_blank') Book Now
           li
             div
-              h3 40 lap practice #[span.sticker Popular]
+              h3 40 lap practice 
               p 2 x 20 Laps (15 Minute) Sessions
+              p Only £15.75 per session
+              .race-packages__price-list--packages--carts 
+                p #[span Carts:] SR4 200cc (14+), Junior Racer (8-13)
+
+            div
+              span £31.50/driver
+              p.sticker 10% Discount
+              a.button.button__primary(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=10discount040laps2x20lapsages8yrssaving350pp' target='_blank') Book Now
+          li
+            div
+              h3 50 lap practice
+              p 2 x 25 Laps (20 Minute) Sessions
               p Only £17.50 per session
+              .race-packages__price-list--packages--carts 
+                p #[span Carts:] SR4 200cc (14+), Junior Racer (8-13)
 
             div
               span £35/driver
-              span Adult SR4 200cc (14+)
-              span Junior Racer (8-13)
-              a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=juniorandfamilieskarting040laps2x20laps' target='_blank') Book Now
+              p.sticker 25% Extra Laps
+              a.button.button__primary(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=25extralaps050laps2x25lapsages8yrsincluding10extralaps' target='_blank') Book Now
           li
             div
-              h3 66 lap practice #[span.sticker Best Value]
+              h3 66 lap practice
               p 3 x 22 Laps (16 Minute) Sessions
               p Midweek Only
-              p Only £15.00 per session
+              p Only £10.12 per session
+              .race-packages__price-list--packages--carts 
+                p #[span Carts:] SR4 200cc (14+), Junior Racer (8-13)
             div
-              span £45/driver
-              span Adult SR4 200cc (14+)
-              span Junior Racer (8-13)
-              a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=juniorandfamilieskarting066laps3x22laps' target='_blank') Book Now
+              span £40.50/driver
+              p.sticker 10% Discount
+              a.button.button__primary(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=10discount066laps3x22lapsages8yrssaving450pp' target='_blank') Book Now
 
       .content-block
         h3 Adult Open Karting (12yrs+)
@@ -72,40 +86,70 @@ block content
             div
               h3 20 lap practice
               p 20 Laps (15 Minute) Non-Stop Session
+              .race-packages__price-list--packages--carts 
+                p #[span Carts:] SR4 200cc (14+), Junior Racer (12-13)
             div
               span £22/driver
-              span Adult SR4 200cc (14+)
-              span Junior Racer (12-13)
-              a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=practice020lap' target='_blank') Book Now
+              a.button.button__primary(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=practice020lap' target='_blank') Book Now
+   
           li
             div
               h3 40 lap practice
               p 2 x 20 Laps (15 Minute) Sessions
+              p Only £15.75 per session
+              .race-packages__price-list--packages--carts 
+                p #[span Carts:] SR4 200cc (14+), Junior Racer (12-13)
+
+            div
+              span £31.50/driver
+              p.sticker 10% Discount
+              a.button.button__primary(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=10discount040laps2x20lapsages12yrssaving350pp' target='_blank') Book Now
+          li
+            div
+              h3 50 lap practice
+              p 2 x 25 Laps (20 Minute) Sessions
               p Only £17.50 per session
+              .race-packages__price-list--packages--carts 
+                p #[span Carts:] SR4 200cc (14+), Junior Racer (12-13)
+
             div
               span £35/driver
-              span Adult SR4 200cc (14+)
-              span Junior Racer (12-13)
-              a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=practice040lap2x20laps' target='_blank') Book Now
+              p.sticker 25% Extra Laps
+              a.button.button__primary(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=25extralaps050laps2x25lapsages12yrsincluding10extralaps' target='_blank') Book Now
           li
             div
-              h3 66 lap practice #[span.sticker Popular]
+              h3 66 lap practice
               p 3 x 22 Laps (16 Minute) Sessions
+              p Midweek Only
+              p Only £10.12 per session
+              .race-packages__price-list--packages--carts 
+                p #[span Carts:] SR4 200cc (14+), Junior Racer (12-13)
+            div
+              span £40.50/driver
+              p.sticker 10% Discount
+              a.button.button__primary(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=10discount066laps3x22lapsages12yrssaving450pp' target='_blank') Book Now
+          li
+            div
+              h3 84 lap practice
+              p 3 x 28 Laps (20 Minute) Sessions
+              p Midweek Only
               p Only £15.00 per session
+              .race-packages__price-list--packages--carts 
+                p #[span Carts:] SR4 200cc (14+), Junior Racer (12-13)
             div
               span £45/driver
-              span Adult SR4 200cc (14+)
-              span Junior Racer (12-13)
-              a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=practice066lap3x22laps' target='_blank') Book Now
+              p.sticker 25% Extra Laps
+              a.button.button__primary(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=25extralaps084laps3x28lapsages12yrsincluding18extralaps' target='_blank') Book Now
           li
             div
-              h3 100 lap practice #[span.sticker Best Value]
+              h3 100 lap practice
               p 4 x 25 Laps (15 Minute) Sessions
               p Only £13.75 per session
+              .race-packages__price-list--packages--carts 
+                p #[span Carts:] SR4 200cc (14+) only
             div
               span £55/driver
-              span Adult SR4 200cc (14+) only
-              a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=practice100lap4x25laps200cconly' target='_blank') Book Now
+              a.button.button__primary(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=practice100lap4x25laps200cconly' target='_blank') Book Now
 
       .content-block
         h3 Weekend Junior Open Karting (8 – 12yrs)
@@ -115,16 +159,19 @@ block content
             div
               h3 20 lap practice
               p 20 Laps (15 Minute) Non-Stop Session
+              .race-packages__price-list--packages--carts 
+                p #[span Carts:] Junior Racer only
             div
               span £22/driver
-              span Junior Racer
-              a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=juniorkartingweekend10am11am020laps' target='_blank') Book Now
+              a.button.button__primary(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=juniorkartingweekend10am11am020laps' target='_blank') Book Now
           li
             div
-              h3 40 lap practice #[span.sticker Popular]
+              h3 40 lap practice
               p 2 x 20 Laps (15 Minute) Sessions
               p Only £17.50 per session
+              .race-packages__price-list--packages--carts 
+                p #[span Carts:] Junior Racer only
             div
               span £35/driver
-              span Junior Racer
-              a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=juniorkartingweekend10am11am040laps2x20laps' target='_blank') Book Now
+              p.sticker Popular
+              a.button.button__primary(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=juniorkartingweekend10am11am040laps2x20laps' target='_blank') Book Now
