--- a/src/css/_partials/variables.styl
+++ b/src/css/_partials/variables.styl
@@ -10,6 +10,7 @@ sansSerif = Arial, Helvetica, sans-serif
 primaryColor = #EE2F34
 primaryColorAccent = #BB2024
 primaryColorGradient = linear-gradient(to bottom, primaryColor 0%, primaryColorAccent 100%)
+summerDealsGradient = linear-gradient(to bottom, #ed582e 0%, #a72523 100%)
 mainGreen = green
 
 linkColor = #EE2F34
