--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -181,10 +181,6 @@ body
     border-radius 5px
     overflow hidden
 
-    .sticker
-      margin 0
-      border-radius 0
-
     &--text
       padding 2rem 2rem 2.5rem 2rem
       width 100%
@@ -193,6 +189,7 @@ body
       position relative
       padding-top 55%
       background lightGrey
+      position relative
 
       img
         position absolute
