--- a/src/pug/_partials/layout.pug
+++ b/src/pug/_partials/layout.pug
@@ -77,6 +77,11 @@ html
     block nav
       +navigation
 
+    block dealSticker
+      .sticker.sticker__summer(href="/layout")
+        .container 
+          a(href="/arrive-and-drive" target="_blank") Summer Holiday offers are now active!
+
     block content
 
     +newsletter
