--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -8,7 +8,6 @@ block pageScripts
   script(src='/js/libs/instafeed.js' async defer onload="loadImages()")
 
 block content
-
   .header-video
     video(src="/video/fast-lane-karting-header.mp4" poster="/video/fast-lane-karting-header-poster.jpg" preload loop muted playsinline)
     .header-video__controls
@@ -46,8 +45,8 @@ block content
           a.button.button__primary(href='/race-packages') Book Online
       .category-cards__card
         .category-cards__card--image
-          img(src='/images/home-categories/arrive-and-drive.jpg' alt='Arrive & Drive')
-        .sticker Summer Deals now active!
+          img(src='/images/home-categories/arrive-and-drive-summer.jpg' alt='Arrive & Drive')
+          .sticker.sticker__summer Summer Holiday Offers now active!
         .category-cards__card--text
           h2 Arrive & Drive
           .red-highlight
