Added callout for summer deals

--- a/src/pug/_partials/layout.pug
+++ b/src/pug/_partials/layout.pug
@@ -80,7 +80,7 @@ html
     block dealSticker
       .sticker.sticker__summer(href="/layout")
         .container 
-          a(href="/arrive-and-drive" target="_blank") Summer Holiday offers are now active!
+          a(href="/arrive-and-drive") Summer Holiday offers are now active!
 
     block content
 
