--- a/src/css/_partials/typography.styl
+++ b/src/css/_partials/typography.styl
@@ -71,7 +71,7 @@ p
 .sticker
   text-align center
   background mainGreen
-  padding .5rem 1.25rem
+  padding 1rem 1.25rem
   margin .5rem 0 .5rem 0
   color white
   font-family sansSerif
