Removed Axios lib

--- a/src/pug/arrive-and-drive/index.pug
+++ b/src/pug/arrive-and-drive/index.pug
@@ -139,7 +139,7 @@ block content
             div
               span £45/driver
               p.sticker 25% Extra Laps
-              a.button.button__primary(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=25extralaps084laps3x28lapsages12yrsincluding18extralaps&v=2' target='_blank') Book Now
+              a.button.button__primary(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=25extralaps084laps3x28lapsages12yrsincluding18extralaps' target='_blank') Book Now
           li
             div
               h3 100 lap practice
