--- a/src/pug/_partials/layout.pug
+++ b/src/pug/_partials/layout.pug
@@ -71,8 +71,8 @@ html
  
   body    
     //- Preloads page hyperlinks when hovered over so that they load instantly
-    script
-      include ../../../dist/js/instantPage.js
+    //- script
+    //-   include ../../../dist/js/instantPage.js
       
     block nav
       +navigation
