--- a/src/pug/_partials/layout.pug
+++ b/src/pug/_partials/layout.pug
@@ -78,9 +78,9 @@ html
       +navigation
 
     block dealSticker
-      .sticker.sticker__summer(href="/layout")
-        .container 
-          a(href="/arrive-and-drive") Summer Holiday offers are now active!
+      //- .sticker.sticker__summer(href="/layout")
+      //-   .container 
+      //-     a(href="/arrive-and-drive") Summer Holiday offers are now active!
 
     block content
 
