--- a/src/pug/arrive-and-drive/index.pug
+++ b/src/pug/arrive-and-drive/index.pug
@@ -37,7 +37,7 @@ block content
               h3 20 lap practice
               p 20 Laps (15 Minute) Non-Stop Session
               .race-packages__price-list--packages--carts 
-                p #[span Carts:] SR4 200cc (14+), Junior Racer (8-13)
+                p #[span Karts:] SR4 200cc (14+), Junior Racer (8-13)
             div
               span £22/driver
               a.button.button__primary(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=juniorandfamilieskarting020laps' target='_blank') Book Now
@@ -47,10 +47,11 @@ block content
               p 2 x 20 Laps (15 Minute) Sessions
               p Only £17.50 per session
               .race-packages__price-list--packages--carts 
-                p #[span Carts:] SR4 200cc (14+), Junior Racer (8-13)
+                p #[span Karts:] SR4 200cc (14+), Junior Racer (8-13)
 
             div
               span £35/driver
+              p.sticker Popular
               a.button.button__primary(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=juniorandfamilieskarting040laps2x20laps' target='_blank') Book Now
           li
             div
@@ -59,9 +60,10 @@ block content
               p Midweek Only
               p Only £15 per session
               .race-packages__price-list--packages--carts 
-                p #[span Carts:] SR4 200cc (14+), Junior Racer (8-13)
+                p #[span Karts:] SR4 200cc (14+), Junior Racer (8-13)
             div
               span £45/driver
+              p.sticker Best Value
               a.button.button__primary(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=juniorandfamilieskarting066laps3x22laps' target='_blank') Book Now
 
       .content-block
@@ -73,7 +75,7 @@ block content
               h3 20 lap practice
               p 20 Laps (15 Minute) Non-Stop Session
               .race-packages__price-list--packages--carts 
-                p #[span Carts:] SR4 200cc (14+), Junior Racer (12-13)
+                p #[span Karts:] SR4 200cc (14+), Junior Racer (12-13)
             div
               span £22/driver
               a.button.button__primary(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=practice020lap' target='_blank') Book Now
@@ -82,9 +84,9 @@ block content
             div
               h3 40 lap practice
               p 2 x 20 Laps (15 Minute) Sessions
-              p Only £15.75 per session
+              p Only £17.50 per session
               .race-packages__price-list--packages--carts 
-                p #[span Carts:] SR4 200cc (14+), Junior Racer (12-13)
+                p #[span Karts:] SR4 200cc (14+), Junior Racer (12-13)
             div
               span £35/driver
               a.button.button__primary(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=practice040lap2x20laps' target='_blank') Book Now
@@ -93,12 +95,12 @@ block content
             div
               h3 66 lap practice
               p 3 x 22 Laps (16 Minute) Sessions
-              p Midweek Only
-              p Only £10.12 per session
+              p Only £15 per session
               .race-packages__price-list--packages--carts 
-                p #[span Carts:] SR4 200cc (14+), Junior Racer (12-13)
+                p #[span Karts:] SR4 200cc (14+), Junior Racer (12-13)
             div
               span £45/driver
+              p.sticker Popular
               a.button.button__primary(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=practice066lap3x22laps' target='_blank') Book Now
               
           li
@@ -107,9 +109,10 @@ block content
               p 4 x 25 Laps (15 Minute) Sessions
               p Only £13.75 per session
               .race-packages__price-list--packages--carts 
-                p #[span Carts:] SR4 200cc (14+) only
+                p #[span Karts:] SR4 200cc (14+) only
             div
               span £55/driver
+              p.sticker Best Value
               a.button.button__primary(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=practice100lap4x25laps200cconly' target='_blank') Book Now
 
       .content-block
@@ -121,7 +124,7 @@ block content
               h3 20 lap practice
               p 20 Laps (15 Minute) Non-Stop Session
               .race-packages__price-list--packages--carts 
-                p #[span Carts:] Junior Racer only
+                p #[span Karts:] Junior Racer only
             div
               span £22/driver
               a.button.button__primary(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=juniorkartingweekend10am11am020laps' target='_blank') Book Now
@@ -131,7 +134,7 @@ block content
               p 2 x 20 Laps (15 Minute) Sessions
               p Only £17.50 per session
               .race-packages__price-list--packages--carts 
-                p #[span Carts:] Junior Racer only
+                p #[span Karts:] Junior Racer only
             div
               span £35/driver
               p.sticker Popular
