Added Halloween deals

--- a/src/css/_partials/nav.styl
+++ b/src/css/_partials/nav.styl
@@ -37,6 +37,7 @@ nav, .nav
 
     .container
       background url('/images/crossed-flags.png') no-repeat 55% 38%
+      background-blend-mode multiply
 
   &__logo
     width 28rem
