--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -5,6 +5,8 @@ block pageScripts
     include ../../dist/js/header-video.js
 
 block content
+  .sticker.sticker__summer 
+    a(href='/offers') October Half Term Deals now active
   .header-video
     video(src="/video/fast-lane-karting-header.mp4" poster="/video/fast-lane-karting-header-poster.jpg" preload loop muted playsinline)
     .header-video__controls
