--- a/src/pug/arrive-and-drive/index.pug
+++ b/src/pug/arrive-and-drive/index.pug
@@ -41,30 +41,63 @@ block content
             div
               span £22/driver
               a.button.button__primary(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=juniorandfamilieskarting020laps' target='_blank') Book Now
+          //- li
+          //-   div
+          //-     h3 40 lap practice 
+          //-     p 2 x 20 Laps (15 Minute) Sessions
+          //-     p Only £17.50 per session
+          //-     .race-packages__price-list--packages--carts 
+          //-       p #[span Karts:] SR4 200cc (14+), Junior Racer (8-13)
+
+          //-   div
+          //-     span £35/driver
+          //-     p.sticker Popular
+          //-     a.button.button__primary(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=juniorandfamilieskarting040laps2x20laps' target='_blank') Book Now
+          //- li
+          //-   div
+          //-     h3 66 lap practice
+          //-     p 3 x 22 Laps (16 Minute) Sessions
+          //-     p Midweek Only
+          //-     p Only £15 per session
+          //-     .race-packages__price-list--packages--carts 
+          //-       p #[span Karts:] SR4 200cc (14+), Junior Racer (8-13)
+          //-   div
+          //-     span £45/driver
+          //-     p.sticker Best Value
+          //-     a.button.button__primary(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=juniorandfamilieskarting066laps3x22laps' target='_blank') Book Now
           li
             div
               h3 40 lap practice 
               p 2 x 20 Laps (15 Minute) Sessions
+              p Only £15.75 per session
+              .race-packages__price-list--packages--carts 
+                p #[span Karts:] SR4 200cc (14+), Junior Racer (8-13)
+            div
+              span £31.50/driver
+              p.sticker 10% Discount
+              a.button.button__primary(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=10discount040laps2x20lapsages8yrssaving350pp' target='_blank') Book Now
+          li
+            div
+              h3 50 lap practice 
+              p 2 x 25 Laps (20 Minute) Sessions
               p Only £17.50 per session
               .race-packages__price-list--packages--carts 
                 p #[span Karts:] SR4 200cc (14+), Junior Racer (8-13)
-
             div
               span £35/driver
-              p.sticker Popular
-              a.button.button__primary(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=juniorandfamilieskarting040laps2x20laps' target='_blank') Book Now
+              p.sticker 25% Extra Laps
+              a.button.button__primary(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=25extralaps050laps2x25lapsages8yrsincluding10extralaps' target='_blank') Book Now
           li
             div
-              h3 66 lap practice
-              p 3 x 22 Laps (16 Minute) Sessions
-              p Midweek Only
+              h3 84 lap practice
+              p 3 x 28 Laps (16 Minute) Sessions
               p Only £15 per session
               .race-packages__price-list--packages--carts 
                 p #[span Karts:] SR4 200cc (14+), Junior Racer (8-13)
             div
               span £45/driver
-              p.sticker Best Value
-              a.button.button__primary(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=juniorandfamilieskarting066laps3x22laps' target='_blank') Book Now
+              p.sticker 25% Extra Laps
+              a.button.button__primary(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=25extralaps084laps3x28lapsages12yrsincluding18extralaps' target='_blank') Book Now
 
       .content-block
         h3 Adult Open Karting (12yrs+)
@@ -80,40 +113,85 @@ block content
               span £22/driver
               a.button.button__primary(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=practice020lap' target='_blank') Book Now
    
+          //- li
+          //-   div
+          //-     h3 40 lap practice
+          //-     p 2 x 20 Laps (15 Minute) Sessions
+          //-     p Only £17.50 per session
+          //-     .race-packages__price-list--packages--carts 
+          //-       p #[span Karts:] SR4 200cc (14+), Junior Racer (12-13)
+          //-   div
+          //-     span £35/driver
+          //-     a.button.button__primary(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=practice040lap2x20laps' target='_blank') Book Now
+              
+          //- li
+          //-   div
+          //-     h3 66 lap practice
+          //-     p 3 x 22 Laps (16 Minute) Sessions
+          //-     p Only £15 per session
+          //-     .race-packages__price-list--packages--carts 
+          //-       p #[span Karts:] SR4 200cc (14+), Junior Racer (12-13)
+          //-   div
+          //-     span £45/driver
+          //-     p.sticker Popular
+          //-     a.button.button__primary(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=practice066lap3x22laps' target='_blank') Book Now
+              
+          //- li
+          //-   div
+          //-     h3 100 lap practice
+          //-     p 4 x 25 Laps (15 Minute) Sessions
+          //-     p Only £13.75 per session
+          //-     .race-packages__price-list--packages--carts 
+          //-       p #[span Karts:] SR4 200cc (14+) only
+          //-   div
+          //-     span £55/driver
+          //-     p.sticker Best Value
+          //-     a.button.button__primary(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=practice100lap4x25laps200cconly' target='_blank') Book Now
+
           li
             div
               h3 40 lap practice
               p 2 x 20 Laps (15 Minute) Sessions
+              p Only £15.75 per session
+              .race-packages__price-list--packages--carts 
+                p #[span Karts:] SR4 200cc (14+), Junior Racer (12-13)
+            div
+              span £31.50/driver
+              p.sticker 10% Discount
+              a.button.button__primary(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=10discount040laps2x20lapsages12yrssaving350pp' target='_blank') Book Now
+          li
+            div
+              h3 50 lap practice 
+              p 2 x 25 Laps (17 Minute) Sessions
               p Only £17.50 per session
               .race-packages__price-list--packages--carts 
                 p #[span Karts:] SR4 200cc (14+), Junior Racer (12-13)
             div
               span £35/driver
-              a.button.button__primary(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=practice040lap2x20laps' target='_blank') Book Now
-              
+              p.sticker 25% Extra Laps
+              a.button.button__primary(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=25extralaps050laps2x25lapsages12yrsincluding10extralaps' target='_blank') Book Now
           li
             div
-              h3 66 lap practice
-              p 3 x 22 Laps (16 Minute) Sessions
+              h3 84 lap practice
+              p 3 x 28 Laps (20 Minute) Sessions
               p Only £15 per session
               .race-packages__price-list--packages--carts 
                 p #[span Karts:] SR4 200cc (14+), Junior Racer (12-13)
             div
               span £45/driver
-              p.sticker Popular
-              a.button.button__primary(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=practice066lap3x22laps' target='_blank') Book Now
-              
+              p.sticker 25% Extra Laps
+              a.button.button__primary(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=25extralaps084laps3x28lapsages12yrsincluding18extralaps' target='_blank') Book Now
           li
             div
-              h3 100 lap practice
-              p 4 x 25 Laps (15 Minute) Sessions
+              h3 125 lap practice
+              p 4 x 31/32 Laps (24 Minute) Sessions
               p Only £13.75 per session
               .race-packages__price-list--packages--carts 
                 p #[span Karts:] SR4 200cc (14+) only
             div
               span £55/driver
-              p.sticker Best Value
-              a.button.button__primary(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=practice100lap4x25laps200cconly' target='_blank') Book Now
+              p.sticker 25% Extra Laps
+              a.button.button__primary(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=25extralaps125laps4x3132lapsages14yrsincluding25extralaps' target='_blank') Book Now
 
       .content-block
         h3 Weekend Junior Open Karting (8 – 12yrs)
