--- a/src/pug/offers/index.pug
+++ b/src/pug/offers/index.pug
@@ -45,7 +45,18 @@ block content
             div
               span £35/driver
               p.sticker 25% Extra Laps
-              a.button.button__primary(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=25extralaps050laps2x25lapsages8yrsincluding10extralaps' target='_blank') Book Now
+              a.button.button__primary(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=25extralaps050laps2x25lapsages8yrsincluding10extralaps' target='_blank') Book Now 
+          li
+            div
+              h3 66 lap practice
+              p 3 x 22 Laps (16 Minute) Sessions
+              p Only £13.83 per session
+              .race-packages__price-list--packages--carts 
+                p #[span Karts:] SR4 200cc (14+), Junior Racer (8-13)
+            div
+              span £41.50/driver
+              p.sticker 10% Discount
+              a.button.button__primary(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=10discount066laps3x22lapsages8yrssaving450pp' target='_blank') Book Now
           li
             div
               h3 84 lap practice
@@ -56,7 +67,7 @@ block content
             div
               span £45/driver
               p.sticker 25% Extra Laps
-              a.button.button__primary(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=25extralaps084laps3x28lapsages12yrsincluding18extralaps' target='_blank') Book Now
+              a.button.button__primary(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=25extralaps084laps3x28lapsages8yrsincluding18extralaps' target='_blank') Book Now
 
       .content-block
         h3 Adult Open Karting (12yrs+)
@@ -84,6 +95,17 @@ block content
               span £35/driver
               p.sticker 25% Extra Laps
               a.button.button__primary(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=25extralaps050laps2x25lapsages12yrsincluding10extralaps' target='_blank') Book Now
+          li
+            div
+              h3 66 lap practice
+              p 3 x 22 Laps (16 Minute) Sessions
+              p Only £13.83 per session
+              .race-packages__price-list--packages--carts 
+                p #[span Karts:] SR4 200cc (14+), Junior Racer (12-13)
+            div
+              span £41.50/driver
+              p.sticker 10% Discount
+              a.button.button__primary(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=10discount066laps3x22lapsages12yrssaving450pp' target='_blank') Book Now
           li
             div
               h3 84 lap practice
