Added February half term offers

--- a/src/pug/offers/index.pug
+++ b/src/pug/offers/index.pug
@@ -4,7 +4,7 @@ block nav
   +navigation('/offers')
 
 block title
-  title  October Half Term Offers | Fast Lane Go Karting Stoke
+  title  February Half Term Offers | Fast Lane Go Karting Stoke
 
 block description
   meta(name="description" content="Call 01782 250 450 or email track@fastlanekarting.co.uk to book a go karting package. We're open from 10am until 10:30pm, 7 days a week.")
@@ -13,9 +13,9 @@ block content
   
   section.black.race-packages.arrive-and-drive
     .container
-      h1.center October Half Term Offers
+      h1.center February Half Term Offers
       .red-highlight.centered
-      img(src='/images/banners/happy-halloween.jpg')
+      p.center.race-packages__description Offers available until 20th February
       p.center.race-packages__description #[span.bold.red PLEASE NOTE:] All drivers require a Balaclava and Gloves for hygiene reasons. Feel free to bring your own, or we can supply them for £2.50 per item.
 
 
@@ -57,17 +57,6 @@ block content
               span £41.50/driver
               p.sticker 10% Discount
               a.button.button__primary(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=10discount066laps3x22lapsages8yrssaving450pp' target='_blank') Book Now
-          li
-            div
-              h3 84 lap practice
-              p 3 x 28 Laps (16 Minute) Sessions
-              p Only £15 per session
-              .race-packages__price-list--packages--carts 
-                p #[span Karts:] SR4 200cc (14+), Junior Racer (8-13)
-            div
-              span £45/driver
-              p.sticker 25% Extra Laps
-              a.button.button__primary(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=25extralaps084laps3x28lapsages8yrsincluding18extralaps' target='_blank') Book Now
 
       .content-block
         h3 Adult Open Karting (12yrs+)
