--- a/src/pug/race-packages/index.pug
+++ b/src/pug/race-packages/index.pug
@@ -10,6 +10,8 @@ block description
   meta(name="description" content="Our Endurance and Grand Prix racing packages are perfect for stag dos, hen parties and team building events. Call 01782 250 450 or email track@fastlanekarting.co.uk to book a karting package. We're open from 10am until 10:30pm, 7 days a week.")
 
 block content
+  .sticker.sticker__summer 
+    a(href='/offers') February Half Term Deals now active
 
   section.black.race-packages
     .container
