--- a/src/pug/_partials/navigation.pug
+++ b/src/pug/_partials/navigation.pug
@@ -1,7 +1,7 @@
 mixin navigation(currentPage = '/')
   -
     const navLinks = {
-      'Easter Holiday Offers'  :'/offers',
+      'Half Term Offers'  :'/offers',
       'Race Packages'     :'/race-packages',
       'Arrive & Drive'    :'/arrive-and-drive',
       'Juniors & Parties' :'/juniors-and-parties',
