--- a/src/pug/_partials/navigation.pug
+++ b/src/pug/_partials/navigation.pug
@@ -1,16 +1,16 @@
 mixin navigation(currentPage = '/')
   -
     const navLinks = {
-      'Half Term Offers'  :'/offers',
-      'Race Packages'     :'/race-packages',
-      'Arrive & Drive'    :'/arrive-and-drive',
-      'Juniors & Parties' :'/juniors-and-parties',
-      'Corporate Events'  :'/corporate-events',
-      //- 'Live Timing'   :'/live-timing',
-      //- 'Race History'  :'/race-history',
-      'Register'          :'https://fastlane.reg.volarehq.com/',
-      'Track Layout'      :'/layout',
-      'Contact Us'        :'/contact',
+      "Father's Day Offers" :'/offers',
+      'Race Packages'       :'/race-packages',
+      'Arrive & Drive'      :'/arrive-and-drive',
+      'Juniors & Parties'   :'/juniors-and-parties',
+      'Corporate Events'    :'/corporate-events',
+      //- 'Live Timing'     :'/live-timing',
+      //- 'Race History'    :'/race-history',
+      'Register'            :'https://fastlane.reg.volarehq.com/',
+      'Track Layout'        :'/layout',
+      'Contact Us'          :'/contact',
     }  
 
   nav.nav__primary
