Updated to Summer Holiday offers

--- a/src/pug/arrive-and-drive/index.pug
+++ b/src/pug/arrive-and-drive/index.pug
@@ -11,7 +11,7 @@ block description
 
 block content
   .sticker.sticker__summer 
-    a(href='/offers') Father's Day Deals now active
+    a(href='/offers') Summer Holiday Deals now active
   
   section.black.race-packages.arrive-and-drive
     .container
