--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -6,7 +6,7 @@ block pageScripts
 
 block content
   .sticker.sticker__summer 
-    a(href='/offers') Father's Day Deals now active
+    a(href='/offers') Summer Holiday Deals now active
   .header-video
     video(src="/video/fast-lane-karting-header.mp4" poster="/video/fast-lane-karting-header-poster.jpg" preload loop muted playsinline)
     .header-video__controls
