--- a/src/pug/layout/index.pug
+++ b/src/pug/layout/index.pug
@@ -37,7 +37,7 @@ block content
 
       h2.center 3D Track Tour
       .red-highlight.centered
-      //- iframe.track__matterport(src='https://my.360picture.uk/tour/fastlane-karting' height='600' width='100%' allowfullscreen)
+      iframe.track__matterport(src='https://my.360picture.uk/tour/fastlane-karting' height='600' width='100%' allowfullscreen)
 
       h2.center Onboard Video
       .red-highlight.centered
