--- a/src/pug/offers/index.pug
+++ b/src/pug/offers/index.pug
@@ -4,7 +4,7 @@ block nav
   +navigation('/offers')
 
 block title
-  title  Father's Day Offers | Fast Lane Go Karting Stoke
+  title  Summer Holiday Offers | Fast Lane Go Karting Stoke
 
 block description
   meta(name="description" content="Call 01782 250 450 or email track@fastlanekarting.co.uk to book a go karting package. We're open from 10am until 10:30pm, 7 days a week.")
@@ -13,9 +13,9 @@ block content
   
   section.black.race-packages.arrive-and-drive
     .container
-      h1.center Father's Day Offers
+      h1.center Summer Holiday Offers
       .red-highlight.centered
-      p.center.race-packages__description Offers available Friday 14th - Sunday 16th June
+      p.center.race-packages__description Offers available 8th July - 6th September
       p.center.race-packages__description #[span.bold.red PLEASE NOTE:] All drivers require a Balaclava and Gloves for hygiene reasons. Feel free to bring your own, or we can supply them for £2.50 per item.
 
 
