Updated contact email

--- a/src/pug/contact/index.pug
+++ b/src/pug/contact/index.pug
@@ -7,7 +7,7 @@ block title
   title  Contact Us | Fast Lane Go Karting Stoke
   
 block description
-  meta(name="description" content="Call 01782 250 450 or email track@fastlanekarting.co.uk to book a karting package. We're open from 10am until 10:30pm, 7 days a week. Find us at 151 King Street, Stoke-on-Trent, ST4 3ER.")
+  meta(name="description" content="Call 01782 250 450 or email enquiries@fastlanekarting.co.uk to book a karting package. We're open from 10am until 10:30pm, 7 days a week. Find us at 151 King Street, Stoke-on-Trent, ST4 3ER.")
 
 block content
   section.grey.contact
@@ -19,7 +19,7 @@ block content
           h5 Call Us
           p 01782 250 450
           h5 Email Us
-          p track@fastlanekarting.co.uk
+          p enquiries@fastlanekarting.co.uk
           a.button.button__primary(href='/#packages' target='_blank') Book Online
           h5 Social Media
           .contact__social
