--- a/src/pug/_partials/footer.pug
+++ b/src/pug/_partials/footer.pug
@@ -21,7 +21,7 @@ mixin footer
           .red-highlight
           a.bold(href='tel:+441782250450') 01782 250 450
           br
-          a(href='mailto:track@fastlanekarting.co.uk') track@fastlanekarting.co.uk
+          a(href='mailto:enquiries@fastlanekarting.co.uk') enquiries@fastlanekarting.co.uk
           p Open 7 days 10:00am - 10:30pm
           .footer__social
             a(href='https://www.facebook.com/fastlanekartingindoor' target='_blank')
