--- a/src/pug/_partials/layout.pug
+++ b/src/pug/_partials/layout.pug
@@ -42,7 +42,7 @@ html
       title Fast Lane Go Karting Stoke | The Midlands' #1 Indoor Karting Experience
       
     block description
-      meta(name="description" content="The best indoor go karting venue in Stoke-on-Trent for 25 years. High performance Sodi SR4 sprint karts, kids karts and on-site catering. Call 01782 250 450 or email track@fastlanekarting.co.uk to book a go karting package.")
+      meta(name="description" content="The best indoor go karting venue in Stoke-on-Trent for 25 years. High performance Sodi SR4 sprint karts, kids karts and on-site catering. Call 01782 250 450 or email enquiries@fastlanekarting.co.uk to book a go karting package.")
       
     meta(http-equiv="Content-Type" content="text/html; charset=utf-8")
     meta(name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no")
