--- a/src/pug/arrive-and-drive/index.pug
+++ b/src/pug/arrive-and-drive/index.pug
@@ -7,7 +7,7 @@ block title
   title  Arrive & Drive Sessions | Fast Lane Go Karting Stoke
 
 block description
-  meta(name="description" content="There's no need to book - our Arrive & Drive sessions allow you to hone your skills at any time. Call 01782 250 450 or email track@fastlanekarting.co.uk to book a go karting package. We're open from 10am until 10:30pm, 7 days a week.")
+  meta(name="description" content="There's no need to book - our Arrive & Drive sessions allow you to hone your skills at any time. Call 01782 250 450 or email enquiries@fastlanekarting.co.uk to book a go karting package. We're open from 10am until 10:30pm, 7 days a week.")
 
 block content
   .sticker.sticker__summer 
