--- a/src/pug/corporate-events/index.pug
+++ b/src/pug/corporate-events/index.pug
@@ -7,7 +7,7 @@ block title
   title Corporate Event Packages | Fast Lane Go-Karting Stoke
 
 block description
-  meta(name="description" content="If you’re planning a Corporate Event or Team-Building activity, it can be hard to know what to do! At Fast Lane all of our Corporate Events are run on the 200cc karts so you know your Customer or Staff are getting the best. Call 01782 250 450 or email track@fastlanekarting.co.uk to book a corporate karting package.")
+  meta(name="description" content="If you’re planning a Corporate Event or Team-Building activity, it can be hard to know what to do! At Fast Lane all of our Corporate Events are run on the 200cc karts so you know your Customer or Staff are getting the best. Call 01782 250 450 or email enquiries@fastlanekarting.co.uk to book a corporate karting package.")
 
 block content
 
