--- a/src/pug/juniors-and-parties/index.pug
+++ b/src/pug/juniors-and-parties/index.pug
@@ -7,7 +7,7 @@ block title
   title Junior & Party Packages | Fast Lane Go Karting Stoke
 
 block description
-  meta(name="description" content="Our Kids' Party and Private Sessions offer the an exhilarating day out for all the family. Call 01782 250 450 or email track@fastlanekarting.co.uk to book a karting package. We're open from 10am until 10:30pm, 7 days a week.")
+  meta(name="description" content="Our Kids' Party and Private Sessions offer the an exhilarating day out for all the family. Call 01782 250 450 or email enquiries@fastlanekarting.co.uk to book a karting package. We're open from 10am until 10:30pm, 7 days a week.")
 
 block content
   .sticker.sticker__summer 
