--- a/src/pug/race-history/index.pug
+++ b/src/pug/race-history/index.pug
@@ -7,7 +7,7 @@ block title
   title Leaderboards & Fastest Laps | Fast Lane Go Karting Stoke
 
 block description
-  meta(name="description" content="View the fastest laps of the month and the race history of our registered members. Call 01782 250 450 or email track@fastlanekarting.co.uk to book a karting package. We're open from 10am until 10:30pm, 7 days a week.")
+  meta(name="description" content="View the fastest laps of the month and the race history of our registered members. Call 01782 250 450 or email enquiries@fastlanekarting.co.uk to book a karting package. We're open from 10am until 10:30pm, 7 days a week.")
 
 block content
   section.black
