--- a/src/pug/race-packages/index.pug
+++ b/src/pug/race-packages/index.pug
@@ -7,7 +7,7 @@ block title
   title  Race Packages | Fast Lane Go Karting Stoke
 
 block description
-  meta(name="description" content="Our Endurance and Grand Prix racing packages are perfect for stag dos, hen parties and team building events. Call 01782 250 450 or email track@fastlanekarting.co.uk to book a karting package. We're open from 10am until 10:30pm, 7 days a week.")
+  meta(name="description" content="Our Endurance and Grand Prix racing packages are perfect for stag dos, hen parties and team building events. Call 01782 250 450 or email enquiries@fastlanekarting.co.uk to book a karting package. We're open from 10am until 10:30pm, 7 days a week.")
 
 block content
   .sticker.sticker__summer 
