--- a/src/pug/race-packages/index.pug
+++ b/src/pug/race-packages/index.pug
@@ -11,7 +11,7 @@ block description
 
 block content
   .sticker.sticker__summer 
-    a(href='/offers') Back to School Blues Deals now active
+    a(href='/offers') Spooktober Offers now active
 
   section.black.race-packages
     .container
