--- a/src/pug/arrive-and-drive/index.pug
+++ b/src/pug/arrive-and-drive/index.pug
@@ -10,8 +10,8 @@ block description
   meta(name="description" content="There's no need to book - our Arrive & Drive sessions allow you to hone your skills at any time. Call 01782 250 450 or email enquiries@fastlanekarting.co.uk to book a go karting package. We're open from 10am until 10:30pm, 7 days a week.")
 
 block content
-  .sticker.sticker__summer 
-    a(href='/offers') Spooktober Offers now active
+  //- .sticker.sticker__summer 
+  //-   a(href='/offers') Spooktober Offers now active
   
   section.black.race-packages.arrive-and-drive
     .container
