January Blues offers

--- a/src/pug/_partials/layout.pug
+++ b/src/pug/_partials/layout.pug
@@ -78,9 +78,9 @@ html
       +navigation
 
     block dealSticker
-      //- .sticker.sticker__summer(href="/layout")
-      //-   .container 
-      //-     a(href="/arrive-and-drive") Spooktober Offers are now active!
+      .sticker.sticker__summer
+        .container
+          a(href='/offers') January Blues Offers now active
 
     block content
 
