--- a/src/pug/offers/index.pug
+++ b/src/pug/offers/index.pug
@@ -4,18 +4,20 @@ block nav
   +navigation('/offers')
 
 block title
-  title  Spooktober Offers | Fast Lane Go Karting Stoke
+  title  January Blues Offers | Fast Lane Go Karting Stoke
 
 block description
   meta(name="description" content="Call 01782 250 450 or email enquiries@fastlanekarting.co.uk to book a go karting package. We're open from 10am until 10:30pm, 7 days a week.")
+
+block dealSticker
 
 block content
   
   section.black.race-packages.arrive-and-drive
     .container
-      h1.center Spooktober Offers
+      h1.center January Blues Offers
       .red-highlight.centered
-      p.center.race-packages__description Offers available 21st October - 8th November
+      p.center.race-packages__description Offers available 13th - 31st January
       p.center.race-packages__description #[span.bold.red PLEASE NOTE:] All drivers require a Balaclava and Gloves for hygiene reasons. Feel free to bring your own, or we can supply them for £2.50 per item.
 
 
