Feb half term & temporary logo change

--- a/src/pug/_partials/navigation.pug
+++ b/src/pug/_partials/navigation.pug
@@ -1,7 +1,7 @@
 mixin navigation(currentPage = '/')
   -
     const navLinks = {
-      "Offers"              :'/offers',
+      "Half Term Offers"    :'/offers',
       "Vouchers"            :'https://fastlane.bookmykarting.co.uk/book/385/voucher.aspx',
       'Race Packages'       :'/race-packages',
       'Arrive & Drive'      :'/arrive-and-drive',
@@ -17,7 +17,7 @@ mixin navigation(currentPage = '/')
   nav.nav__primary
     .container
       a(href='/')
-        img.nav__logo(src='/images/logos/fast-lane-karting-logo.svg' alt='Fast Lane Karting Logo')
+        img.nav__logo(src='/images/logos/fast-lane-karting-logo-plain.svg' alt='Fast Lane Karting Logo')
       .nav__menu-toggle Menu
         .nav__menu-toggle-icon
           .nav__menu-toggle-icon-bar
