--- a/src/pug/_partials/layout.pug
+++ b/src/pug/_partials/layout.pug
@@ -80,7 +80,7 @@ html
     block dealSticker
       .sticker.sticker__summer
         .container
-          a(href='/offers') February Half Term Offers now active
+          a(href='/offers') Easter Half Term Offers now active
 
     block content
 
